--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <section class="header">
-    <h1>SEARCH COUNTRIES</h1>
-    <input id="country-name" type="text" />  
-    <button id="search">Search for country</button>
-        </section>
+        <h1>SEARCH COUNTRIES</h1>
+        <input id="country-name" type="text">  
+        <button id="search">Search for country</button>
+    </section>
     <div id="countries">
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
